--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header></header>
+    <main>
+        <p class="title"></p>
+        <p class="author"></p>
+        <p class="pages"></p>
+        <p class="read-status"></p>
+    </main>
+    <footer></footer>
     <script src="script.js"></script>
 </body>
 </html>
