Added a svg Folder

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header></header>
+    <header>
+        <h1>Library</h1>
+    </header>
     <main>
         <p class="title"></p>
         <p class="author"></p>
