--- a/index.html
+++ b/index.html
@@ -11,7 +11,27 @@
         <img class="svg" src="svg/1F4DA.svg" alt="books">
         <h1>Library</h1>
     </header>
-    <main></main>
+    <main>
+        <dialog id="Add-a-book">
+            <h2>Add A Book</h2>
+            <br><hr><br>
+            <form action="">
+                <label for="title">Book Title:</label>
+                <input type="text" id="title" required><br><br>
+                <label for="author">Name of Author:</label>
+                <input type="text" id="author" required><br><br>
+                <label for="pages">No of Pages:</label>
+                <input type="number" id="pages" required><br><br>
+                <input type="radio" id="read" name="choice" value="true" required>
+                <label for="read">Read</label><br>
+                <input type="radio" id="not-read" name="choice" value="false">
+                <label for="not-read">Not read</label><br><br>
+                <input type="submit" id="submit-btn" value="Add Book">
+                <button type="button" class="close-btn">Close Form</button>
+            </form>
+        </dialog>
+    </main>
+    <p class="yes"></p>
     <footer>
         <p>Built by SulaymanCodes github: <a href="https://github.com/Sulaymancodes">Sulaymancodes</a></p>
     </footer>
