--- a/index.html
+++ b/index.html
@@ -8,30 +8,28 @@
 </head>
 <body>
     <header>
-        <img class="svg" src="svg/1F4DA.svg" alt="books">
+        <img class="svg" src="svg/books-svgrepo-com.svg" alt="books">
         <h1>Library</h1>
     </header>
-    <main>
-        <dialog id="Add-a-book">
-            <h2>Add A Book</h2>
-            <br><hr><br>
-            <form action="">
-                <label for="title">Book Title:</label>
-                <input type="text" id="title" required><br><br>
-                <label for="author">Name of Author:</label>
-                <input type="text" id="author" required><br><br>
-                <label for="pages">No of Pages:</label>
-                <input type="number" id="pages" required><br><br>
-                <input type="radio" id="read" name="choice" value="true" required>
-                <label for="read">Read</label><br>
-                <input type="radio" id="not-read" name="choice" value="false">
-                <label for="not-read">Not read</label><br><br>
-                <input type="submit" id="submit-btn" value="Add Book">
-                <button type="button" class="close-btn">Close Form</button>
-            </form>
-        </dialog>
-    </main>
-    <p class="yes"></p>
+    <main></main>
+    <dialog id="Addbook">
+        <h2>Add A Book</h2>
+        <br><hr><br>
+        <form action="">
+            <label for="title">Book Title:</label>
+            <input type="text" id="title" required><br><br>
+            <label for="author">Name of Author:</label>
+            <input type="text" id="author" required><br><br>
+            <label for="pages">No of Pages:</label>
+            <input type="number" id="pages" required><br><br>
+            <input type="radio" id="read" name="choice" value="true" required>
+            <label for="read">Read</label><br>
+            <input type="radio" id="not-read" name="choice" value="false">
+            <label for="not-read">Not read</label><br><br>
+            <input type="submit" id="submit-btn" value="Add Book">
+            <button type="button" class="close-btn">Close Form</button>
+        </form>
+    </dialog>
     <footer>
         <p>Built by SulaymanCodes github: <a href="https://github.com/Sulaymancodes">Sulaymancodes</a></p>
     </footer>
