--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <label for="pages">No of Pages:</label>
             <input type="number" id="pages" required><br><br>
             <input type="radio" id="read" name="choice" value="true" required>
-            <label for="read">Read</label><br>
+            <label for="read">Already read?</label><br>
             <input type="radio" id="not-read" name="choice" value="false">
             <label for="not-read">Not read</label><br><br>
             <input type="submit" id="submit-btn" value="Add Book">
